data/derived/sp14/progs/unify/prog0430.ml.out
Characters 36-39:
  if (f, b) > 100 then (f, b) else f(f,b);;
              ^^^
Error: This expression has type int but an expression was expected of type
         'a * 'b
